# os-capacity

./: .gitignore  .stestr.conf  CONTRIBUTING.rst  Dockerfile  README.md  README.rst  example_grafana_dashboard.json  grafana_cloud_dashboard.json  grafana_project_dashboard.json  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: docker.yaml  tox.yaml
cron/: example.sh  grafana_dashboard.json
doc/source/: conf.py  development.rst  index.rst  installation.rst  usage.rst
horizon/: _footer.html.example  config.json.example  generate-footer.sh
os_capacity/: keystone.py  prometheus.py  prototype.py  shell.py  utils.py
os_capacity/cli/: commands.py
os_capacity/cmd/: os_capacity.py
os_capacity/commands/: commands.py
os_capacity/data/: candidates.py  flavors.py  metrics.py  resource_provider.py  server.py  traits.py  users.py
os_capacity/tests/unit/: fakes.py  test_data.py  test_prometheus.py  test_utils.py
