[metadata]
name = os_capacity
summary = Deployment of Scientific OpenStack using OpenStack Kolla
description-file =
    README.rst
author = StackHPC
author-email = johng@stackhpc.com
home-page = https://stackhpc.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[files]
packages =
    os_capacity

