[metadata]
name = os_capacity
summary = Deployment of Scientific OpenStack using OpenStack Kolla
description-file =
    README.rst
author = StackHPC
author-email = johng@stackhpc.com
url = https://github.com/stackhpc/os-capacity
python-requires = >=3.9
license = Apache-2

[files]
packages =
    os_capacity

[entry_points]
console_scripts=
    os_capacity = os_capacity.prometheus:main
